[gd_scene load_steps=13 format=3 uid="uid://bulhxywvpoddg"]

[ext_resource type="Script" uid="uid://uang0iebkgho" path="res://Scripts/UI/player_stats.gd" id="1_f5bc8"]
[ext_resource type="Texture2D" uid="uid://banlbymmswxbe" path="res://Textures/UI/statbanner.png" id="2_8x3ga"]
[ext_resource type="FontFile" uid="uid://u5f428rcdkpc" path="res://Textures/Tilemaps/UI/m5x7.ttf" id="3_fk0kh"]
[ext_resource type="Texture2D" uid="uid://w88ph3hm3xmc" path="res://Textures/UI/copy.png" id="4_8bck2"]
[ext_resource type="Texture2D" uid="uid://gojr2701yji1" path="res://Textures/UI/statblock.png" id="4_emiye"]
[ext_resource type="Texture2D" uid="uid://cpqjdn8fs2mvn" path="res://Textures/UI/copy_pressed.png" id="5_cffa4"]
[ext_resource type="LabelSettings" uid="uid://b7ok81b7mfcff" path="res://Shaders/SmallStatText.tres" id="5_um3tq"]
[ext_resource type="Texture2D" uid="uid://hirv7fym7x86" path="res://Textures/UI/copy_hover.png" id="6_cffa4"]
[ext_resource type="Texture2D" uid="uid://bo1iy2dqdvijm" path="res://Textures/UI/menubuttonbig.png" id="6_r7ppi"]
[ext_resource type="Texture2D" uid="uid://cx5nsjyrh8wnh" path="res://Textures/UI/menubuttonbigpressed.png" id="7_gle4s"]
[ext_resource type="Texture2D" uid="uid://dslfk6uaudw15" path="res://Textures/UI/menubuttonbighover.png" id="8_8bck2"]
[ext_resource type="LabelSettings" uid="uid://m06gs858ywop" path="res://Shaders/MenuButtonLabelText.tres" id="9_cffa4"]

[node name="PlayerStats" type="CanvasLayer"]
script = ExtResource("1_f5bc8")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameBox" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_8x3ga")
stretch_mode = 5

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/NameBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -11.0
offset_right = 800.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_fk0kh")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="SeedControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SeedBox" type="TextureRect" parent="MarginContainer/VBoxContainer/SeedControls"]
layout_mode = 2
texture = ExtResource("2_8x3ga")
stretch_mode = 5

[node name="Seed" type="Label" parent="MarginContainer/VBoxContainer/SeedControls/SeedBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -11.0
offset_right = 800.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_fk0kh")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopyButton" type="TextureButton" parent="MarginContainer/VBoxContainer/SeedControls/SeedBox"]
layout_mode = 2
offset_left = 284.0
offset_right = 340.0
offset_bottom = 56.0
texture_normal = ExtResource("4_8bck2")
texture_pressed = ExtResource("5_cffa4")
texture_hover = ExtResource("6_cffa4")

[node name="StatsBox" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_emiye")
stretch_mode = 5

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/StatsBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -106.0
offset_right = 94.5
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 2

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
text = "Level:"
label_settings = ExtResource("5_um3tq")

[node name="LevelVal" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
label_settings = ExtResource("5_um3tq")

[node name="XP" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
text = "Current XP:"
label_settings = ExtResource("5_um3tq")

[node name="XPval" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
label_settings = ExtResource("5_um3tq")

[node name="XPtoNext" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
text = "XP to LVL UP:	     "
label_settings = ExtResource("5_um3tq")

[node name="XPtoNextVal" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
label_settings = ExtResource("5_um3tq")

[node name="Health" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
text = "Health:"
label_settings = ExtResource("5_um3tq")

[node name="HealthVal" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
label_settings = ExtResource("5_um3tq")

[node name="BaseStr" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
text = "Strength:"
label_settings = ExtResource("5_um3tq")

[node name="BaseStrVal" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
label_settings = ExtResource("5_um3tq")

[node name="BaseDef" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
text = "Defense:"
label_settings = ExtResource("5_um3tq")

[node name="BaseDefVal" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
label_settings = ExtResource("5_um3tq")

[node name="Atk" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
text = "Attack:"
label_settings = ExtResource("5_um3tq")

[node name="AtkVal" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
label_settings = ExtResource("5_um3tq")

[node name="Armor" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
text = "Armor:"
label_settings = ExtResource("5_um3tq")

[node name="ArmorVal" type="Label" parent="MarginContainer/VBoxContainer/StatsBox/GridContainer"]
layout_mode = 2
label_settings = ExtResource("5_um3tq")

[node name="Inventory" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="GridContainer" parent="MarginContainer/VBoxContainer/Inventory"]
layout_mode = 2
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="Resume" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_r7ppi")
texture_pressed = ExtResource("7_gle4s")
texture_hover = ExtResource("8_8bck2")

[node name="ResumeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Resume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -32.0
offset_right = 95.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"
label_settings = ExtResource("9_cffa4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_r7ppi")
texture_pressed = ExtResource("7_gle4s")
texture_hover = ExtResource("8_8bck2")

[node name="QuitLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = ExtResource("9_cffa4")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
